kb: add/update topics Java Sealed Classes, Java Switch Expressions, Java Text Blocks, Java Security Basics, Java Testing Advanced